@@ -89,3 +89,7 @@ the skewed Levy alpha-stable variates gsl_ran_levy_skew
 * M. Lavasani <lavasani@connect.org.uk> for a bug report and testing on HPUX11
 
 * Jason Beegan <jasontd@indigo.ie> for NetBSD support
+
+* Zeger Knops <zeger@cs.uu.nl> for bug fix
+
+* Rodney Sparapani <rsparapa@mcw.edu> for Darwin support
