@@ -37,6 +37,7 @@
 #undef HAVE_FREEBSD_IEEE_INTERFACE
 #undef HAVE_OS2EMX_IEEE_INTERFACE
 #undef HAVE_NETBSD_IEEE_INTERFACE
+#undef HAVE_DARWIN_IEEE_INTERFACE
 
 /* Define this if we need to include /usr/include/float.h explicitly
    in order to get FP_RND_RN and related macros.  This is known to be
