@@ -1,3 +1,7 @@
+Fri Apr 13 15:07:10 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* fp-darwin.c: added darwin support from Rodney Sparapani
+
 Wed Mar 28 13:12:20 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* fp-netbsd.c: added netbsd support from Jason Beegan
